<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky"
    tools:context=".ui.menu.MenuActivity">

    <View
        android:id="@+id/scrim"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#CC1B5E20"
        android:contentDescription="@string/cd_menu_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.35"
        android:contentDescription="@string/cd_menu_background"
        android:scaleType="centerCrop"
        android:src="@drawable/ciatfarmer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textMenuTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_padding"
        android:layout_marginTop="72dp"
        android:text="@string/menu_title"
        android:textAppearance="?attr/textAppearanceHeadlineMedium"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/screen_padding"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textMenuTitle">

        <LinearLayout
            android:id="@+id/menuButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAgronomy"
                style="@style/Widget.UkulimaIQ.Button.Menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/menu_button_spacing"
                android:text="@string/menu_agronomy" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnClimate"
                style="@style/Widget.UkulimaIQ.Button.Menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/menu_button_spacing"
                android:text="@string/menu_climate" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMarketPrice"
                style="@style/Widget.UkulimaIQ.Button.Menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/menu_button_spacing"
                android:text="@string/menu_market_price" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMarketMap"
                style="@style/Widget.UkulimaIQ.Button.Menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_market_map" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
